# hdtgraph-rs

./: IMPLEMENTATION_CHECKLIST.md  README.md
.github/workflows/: ci.yml  release.yml  wheels.yml
rustdynconn/: Cargo.toml  pytest.ini
rustdynconn/.github/workflows/: ci.yml  release.yml  wheels.yml
rustdynconn/crates/rustdynconn-core/: Cargo.toml
rustdynconn/crates/rustdynconn-core/src/: lib.rs
rustdynconn/crates/rustdynconn-core/src/ett/: ett_forest.rs  mod.rs  splay.rs
rustdynconn/crates/rustdynconn-core/src/hdt/: dynamic_graph.rs  levels.rs  mod.rs  replacement.rs
rustdynconn/crates/rustdynconn-core/src/util/: edge.rs
rustdynconn/crates/rustdynconn-core/tests/: basic.rs
rustdynconn/crates/rustdynconn-py/: Cargo.toml  pyproject.toml
rustdynconn/crates/rustdynconn-py/rustdynconn/: _typing.py  nx.py
rustdynconn/crates/rustdynconn-py/src/: api.rs  lib.rs  mapping.rs
rustdynconn/examples/: debugging_hooks.py  dynamic_vs_static.py  networkx_interop.py  simulation_workload.py
rustdynconn/python/rustdynconn/: _typing.py
rustdynconn/rustdynconn/: __init__.py  _typing.py  nx.py
rustdynconn/scripts/: check_implementation_checklist.py  preflight.sh
rustdynconn/tests/python/: requirements.txt  test_correctness.py  test_nx_compat.py  test_performance_smoke.py  test_stress_random.py
