[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "rustdynconn"
version = "0.1.0"
description = "Dynamic connectivity graph (Rust core with Python bindings)."
readme = "../../README.md"
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[tool.maturin]
python-source = "../../python"
bindings = "pyo3"
module-name = "rustdynconn._rustdynconn"
